--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,21 @@
-
 {
     "name": "MIYA LINGO: Japanese Learning Companion",
     "short_name": "MIYA LINGO",
-    "description": "Your friendly companion for mastering the Japanese language, from hiragana to syntax.",
+    "description": "Your friendly companion for mastering the Japanese language.",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#A0E7E5",
+    "theme_color": "#A0E7E5",
     "icons": [
         {
-            "src": "/miya-pixel-art.png",
+            "src": "/my-cool-icon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/miya-pixel-art.png",
+            "src": "/my-cool-icon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
-    ],
-    "theme_color": "#A0E7E5",
-    "background_color": "#A0E7E5",
-    "display": "standalone",
-    "start_url": "/"
+    ]
 }
