--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-
 {
   "name": "nextn",
+  "description": "Интерактивная платформа для изучения японского языка с ИИ-ассистентом.",
   "version": "0.1.0",
   "private": true,
   "scripts": {
